# Powerguard

./: .gitignore  research.txt
biomechanics-sbd/: Pose_estimationModule.py  bench_press_analyzer.py  biomechanics_metrics.py  count_bench_press.py  deadlift_analyzer.py  main.py  pyproject.toml  requirements.txt  squat_analyzer.py  utils.py
powerguard/: main.py  pyproject.toml  requirements.txt
powerguard/agents/: biomech_agent.py  fatigue_agent.py  graph.py  risk_agent.py
powerguard/api/: main.py
powerguard/api/middleware/: request_logger.py
powerguard/api/routes/: analysis.py  health.py
powerguard/config/: settings.py
powerguard/data/: mock_provider.py  models.py  provider.py
powerguard/engines/: fatigue_engine.py  recovery_engine.py  stress_engine.py
powerguard/observability/: logger.py
powerguard/schemas/: agent_state.py  request.py  response.py
powerguard/vector_store/: qdrant_store.py
